--- a/Maui/SimpleWeather.Maui/Preferences/Settings_General.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_General.xaml
@@ -42,7 +42,10 @@
             Style="{DynamicResource SettingsTableViewStyle}">
             <TableRoot>
                 <TableSection Title="{x:Static res_strings:Resources.pref_title_general}">
-                    <prefs:SwitchCell x:Name="FollowGPS" Text="{x:Static res_strings:Resources.pref_summary_currentlocation}" />
+                    <prefs:SwitchCell
+                        x:Name="FollowGPS"
+                        Text="{x:Static res_strings:Resources.label_currentlocation}"
+                        Detail="{x:Static res_strings:Resources.pref_summary_currentlocation}" />
                     <prefs:ListViewCell
                         x:Name="IntervalPref"
                         PreferenceKey="{x:Static settings:SettingsManager.KEY_REFRESHINTERVAL}"
@@ -110,7 +113,10 @@
                         x:Name="APIPref"
                         PreferenceKey="{x:Static settings:SettingsManager.KEY_API}"
                         Text="{x:Static res_strings:Resources.api_label}" />
-                    <prefs:SwitchCell x:Name="PersonalKeyPref" Text="{x:Static res_strings:Resources.pref_summary_personalkey}" />
+                    <prefs:SwitchCell
+                        x:Name="PersonalKeyPref"
+                        Text="{x:Static res_strings:Resources.pref_title_personalkey}"
+                        Detail="{x:Static res_strings:Resources.pref_summary_personalkey}"/>
                     <TextCell
                         x:Name="APIRegisterPref"
                         Detail="{x:Static res_strings:Resources.pref_summary_apiregister}"
