--- a/Maui/SimpleWeather.Maui/Controls/Graphs/Views/BarGraphPanel.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/Graphs/Views/BarGraphPanel.xaml
@@ -34,13 +34,13 @@
             DrawIconLabels="False"
             FontSize="{OnIdiom Phone=13,
                                Default=15}"
+            HeightRequest="{OnIdiom Default=275, Tablet=225, Phone=150}"
             HorizontalOptions="FillAndExpand"
             ItemWidthChanged="GraphView_ItemWidthChanged"
             Loaded="GraphView_Loaded"
             ViewChanged="GraphView_ViewChanged">
             <graphs:BarGraphView.GestureRecognizers>
                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                <ClickGestureRecognizer Clicked="ClickGestureRecognizer_Clicked" />
             </graphs:BarGraphView.GestureRecognizers>
         </graphs:BarGraphView>
     </Grid>
