--- a/Maui/SimpleWeather.Maui/Main/WeatherDetailsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherDetailsPage.xaml
@@ -42,11 +42,15 @@
             RemainingItemsThresholdReached="ListControl_RemainingItemsThresholdReached">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <localControls:WeatherDetailPanel Margin="0,0,0,8" />
+                    <localControls:WeatherDetailPanel Margin="0,0,0,8">
+                        <localControls:WeatherDetailPanel.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="DetailPanel_Tapped" />
+                        </localControls:WeatherDetailPanel.GestureRecognizers>
+                    </localControls:WeatherDetailPanel>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
             <CollectionView.ItemsLayout>
-                <LinearItemsLayout Orientation="Vertical" ItemSpacing="8" />
+                <LinearItemsLayout Orientation="Vertical" />
             </CollectionView.ItemsLayout>
         </CollectionView>
         <ActivityIndicator
